# NEXT

./: .clang-format  CHANGELOG.md  CITATION.cff  CMakeLists.txt  INSTALL.md  INSTALL_Darwin.md  INSTALL_Linux.md  INSTALL_MSVC.md  INSTALL_MinGW.md  NEXT_Quickstart_Under_30_Seconds.md  NOTICE  NOTICE.LESSER  README.md
.github/workflows/: aarch64.yml  bsd.yaml  bsd.yml  clang-tidy.yml  cmake-multi-platform.yml  icx.yml  mpi.yml  netbsd.yml  style.yml  ubuntu-rolling.yml
argparse/: argparse.cpp  argparse.hpp
docs/: compiling.md  conf.py  getting_started-astronomer  getting_started-astronomer.md  getting_started-public.md  getting_started.md  getting_started.rst  index.md  index.rst  install_linux.md  install_mac.md  install_mingw.md  install_msvc.md  running-example.md
examples/ColdCollapseGalaxy/: README.md  coldcollapse.py
examples/GalaxyDemo/: README.md  galaxy.py
examples/TwoBodies/: README.md  run.sh  two_body.py
examples/TwoDifferentGalaxies/: two_galaxies.py
include/: floatdef.h
src/: begrun.cpp
src/dt/: adaptive.h  softening.h
src/gravity/: octree.h  step.h
src/io/: hdf5_save.cpp  hdf5_save.h  load_particle.hpp  vtk_save.h  vtu_save.h
src/struct/: particle.h
tools/: README.md  icbuilder.py
